--- a/GlobalMatrices/Population/population.ipynb
+++ b/GlobalMatrices/Population/population.ipynb
@@ -8,8 +8,9 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib as mlt\n",
-    "from scipy import stats"
+    "import plotly.express as px\n",
+    "from scipy import stats\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -38,7 +39,7 @@
     "\n",
     "def findMissing():\n",
     "    years =populationData['Year']\n",
-    "    values = populationData['Value']\n",
+    "    values = populationData['Population']\n",
     "    if years.isna().any() or values.isna().any():\n",
     "      years = years.fillna(method='ffill')\n",
     "      values = values.fillna(method='bfill')\n",
@@ -49,7 +50,7 @@
     "\n",
     "def detectOutliers(threshold=3):\n",
     "    years =populationData['Year']\n",
-    "    values = populationData['Value']\n",
+    "    values = populationData['Population']\n",
     "    yearsZScores = np.abs(stats.zscore(years))\n",
     "    valueZScores =np.abs(stats.zscore(values))\n",
     "    yOutliers = (yearsZScores > threshold)\n",
@@ -68,7 +69,7 @@
     "    elif n >= 1_000_000:  # Millions\n",
     "        return f\"{n / 1_000_000:.0f}M\"\n",
     "    elif n >= 100_000:  # Hundred Thousands\n",
-    "        return f\"{n / 1_000:.0f}Th\"\n",
+    "        return f\"{n / 1_000:.0f}tK\"\n",
     "    elif n >= 1_000:  # Thousands\n",
     "        return f\"{n / 1_000:.0f}K\"\n",
     "    else:  # Less than 1,000\n",
@@ -91,36 +92,142 @@
     "# Ensuring Correct Columns\n",
     "\n",
     "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "tPC = Total Population Change\n",
+    "fY = first Year\n",
+    "lY = last Year\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "populationData.columns = populationData.columns.str.strip()\n",
     "\n",
     "# Converting and ensuring to make it numeric\n",
     "populationData['Year'] = pd.to_numeric(populationData['Year'])\n",
     "\n",
     "# Total Population Increase\n",
-    "firstYear = populationData[populationData['Year']==1960].set_index('Country Name')['Value']\n",
-    "lastYear = populationData[populationData['Year']==2023].set_index('Country Name')['Value']\n",
+    "fY = populationData[populationData['Year']==1960].set_index('Country Name')['Population']\n",
+    "lY = populationData[populationData['Year']==2023].set_index('Country Name')['Population']\n",
     "\n",
     "\n",
-    "totalPopulationChange = pd.DataFrame({'Population-1960': firstYear, 'Population-2023': lastYear}).reset_index()\n",
+    "tPC = pd.DataFrame({'Population-1960': fY, 'Population-2023': lY}).reset_index()\n",
     "\n",
     "\n",
     "# Total increase\n",
-    "totalPopulationChange['Total Increase'] = totalPopulationChange['Population-2023'] - totalPopulationChange['Population-1960']\n",
+    "tPC['Total Increase'] = tPC['Population-2023'] - tPC['Population-1960']\n",
     "\n",
     "# Percentage Increase\n",
-    "totalPopulationChange['Growth Rate'] = (totalPopulationChange['Total Increase'] / totalPopulationChange['Population-1960'])\n",
+    "tPC['Growth Rate'] = (tPC['Total Increase'] / tPC['Population-1960'])\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "# Formatting Data\n",
-    "totalPopulationChange['Growth Rate']= totalPopulationChange['Growth Rate'].apply(lambda x: f\"{x:.1f}%\")\n",
+    "tPC['Growth Rate']= tPC['Growth Rate'].apply(lambda x: f\"{x:.1f}%\")\n",
     "\n",
     "\n",
     "\n",
     "print(\"\\nTotal Population Change (1960-2023):\")\n",
-    "print(totalPopulationChange)\n",
+    "print(tPC)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting Trend Line\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "cD = country Data\n",
+    "sY = selected Years\n",
+    "fY = future Years\n",
+    "pP = predict Population\n",
+    "fD = future Data\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def predictPopulation(country):\n",
+    "    cD = populationData[populationData['Country Name'] == country].sort_values('Year')\n",
+    "    cD = cD.sort_values('Year')\n",
+    "\n",
+    "    # Selecting the 10 year gap and the  last 3 years\n",
+    "    sY =  list(range(1960, 2024, 10)) + [2020, 2021, 2022, 2023]\n",
+    "    # print(\"SelectedYears:\", sY)\n",
+    "    cD = cD[cD['Year'].isin(sY)]\n",
+    "    # print(\"CountryData\",cD.head())\n",
+    "    # Predicting the Population 2024 - 2040\n",
+    "    XTrain = cD[\"Year\"].values.reshape(-1, 1)\n",
+    "    yTrain = cD[\"Population\"].values\n",
+    "    model = LinearRegression()\n",
+    "    model.fit(XTrain,yTrain)\n",
+    "    #Predict From - To\n",
+    "    fY = np.array(range(2024, 2031)).reshape(-1,1)\n",
+    "    pP= model.predict(fY)\n",
+    "    # print(pP)\n",
+    "\n",
+    "    # appending the predicted Data into the data-set\n",
+    "    fD = pd.DataFrame({'Year': fY.flatten(), 'Population':pP, \"Country Name\": country,  \"Predicted\": True})\n",
+    "    cD[\"Predicted\"] = False\n",
+    "    fD['Country Name'] = country\n",
+    "    finalData = pd.concat([cD, fD])\n",
+    "    # print(finalData\n",
+    "\n",
+    "    return finalData\n",
+    "def plotPopulation():\n",
+    "    countries = populationData['Country Name'].unique()\n",
+    "    totalData = pd.concat([predictPopulation(country) for country in countries])\n",
+    "    initialCountry = countries[0]\n",
+    "    initialData = totalData[totalData[\"Country Name\"] == initialCountry]\n",
+    "    # Plotting Line Chart\n",
+    "    fig = px.line(initialData, x='Year', y='Population', title = f\"<b>Population of {initialCountry}</b>\", markers=True, labels={\"Population\": \"<b>Population</b>\", \"Year\": \"<b>Year</b>\"},color_discrete_map={False: \"blue\", True: \"red\"}, line_group=\"Predicted\")\n",
+    "    fig.update_traces(hoverinfo=\"x+y\", mode=\"lines+markers\")\n",
+    "    # DropDown to Select Country\n",
+    "    dropDownButtons = [\n",
+    "        {\"label\": c, \"method\": \"update\", \"args\": \n",
+    "            [{\"x\": [totalData[totalData[\"Country Name\"] == c][\"Year\"]],\n",
+    "               \"y\": [totalData[totalData[\"Country Name\"] == c][\"Population\"]],\n",
+    "                \"marker\": [{\"color\": totalData[totalData[\"Country Name\"] == c][\"Predicted\"].map({True: \"red\", False: \"blue\"})}]},\n",
+    "             {\"title\": f\"<b>Population of {c}</b>\", \"title_text\": f\"<b>Population of {c}</b>\"}]\n",
+    "        } for c in countries\n",
+    "    ]\n",
+    "    fig.update_layout(\n",
+    "        updatemenus=[{\n",
+    "            \"buttons\": dropDownButtons,\n",
+    "            \"direction\": \"down\",\n",
+    "            \"showactive\": True,\n",
+    "            \"x\": 0.15,\n",
+    "            \"xanchor\": \"left\",\n",
+    "            \"y\": 1.15,\n",
+    "            \"yanchor\": \"top\",\n",
+    "        }],\n",
+    "        title_text=f\"<b>Population of {initialCountry}</b>\",\n",
+    "        title_x=0.5,\n",
+    "        title_xanchor=\"center\"\n",
+    "        \n",
+    "    )\n",
+    "    fig.show()\n",
+    "    fig.write_html(\"population.html\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "plotPopulation()\n"
    ]
   }
  ],
