--- a/Economy/WorldDebtAnalysis/world_debt.ipynb
+++ b/Economy/WorldDebtAnalysis/world_debt.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,37 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"\"\"\n",
     "\n",
-    "Reading Excel File is far slower than CSV so convert it to CSV for faster Data Execution and Reading\n",
-    "Because When you Download data from the website it will be xlsx file Which you can read as you like \n",
-    "\n",
-    "def convertExcelToCSV():\n",
-    "    path=\"E:/Projects/python/EDA/Economy/WorldDebt/WorldDebt-2024.xlsx\"\n",
-    "    data =pd.read_excel(path, engine='openpyxl')\n",
-    "    data.to_csv(\"WorldDebt-2024.csv\", index=False)\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "FILEPATH =\"E:/Projects/python/EDA/Economy/WorldDebt/WorldDebt-2024.csv\"\n",
-    "dataframe = pd.read_csv(FILEPATH)"
+    "FILEPATH =\"E:/Projects/python/EDA/Economy/WorldDebtAnalysis/WorldDebt-2024.csv\"\n",
+    "dataframe = pd.read_csv(FILEPATH)\n",
+    "print(dataframe)\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nonNa =    dataframe.dropna()\n",
+    "print(nonNa)"
    ]
   },
   {
